# TwitchFun

./: pyproject.toml
app/config/: settings.py
